editor: use QLineEdit instead of hand-rolling one

We're editing a line of text, so it makes sense to use a QLineEdit
instead of hacking in editing into the control ourselves. This
gives the users a few neat extra-features, like copy-paste and
undo/redo on the editing itself, yay!

Work around QTBUG-4045, by stripping away group-separators.